--- a/praveenk.html
+++ b/praveenk.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>pk</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="My First portfolio website">
+	<meta name="keywords" content="HTML, CSS">
+        <meta name="author" content="PRAVEEN BAIRAGI">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style>
